<resources>
    <string name="app_name">NewsReader</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SPORTS.RU</string>
    <string name="nav_header_subtitle">SPORTS.RU</string>
    <string name="nav_header_desc">SPORTS.RU</string>
    <string name="action_settings">Settings</string>
    <string name="load_async">Wait one moment, please</string>
    <string name="run">Run</string>
    <string name="box">Box</string>
    <string name="hockey">Hockey</string>
    <string name="handball">Handball</string>
    <string name="aquatics">Aquatics</string>
    <string name="football">Football</string>
    <string name="tennis">Tennis</string>
    <string name="ski">Ski</string>
    <string name="main">Main page</string>
</resources>
