<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/main" />

        <item
            android:id="@+id/nav_run"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/run" />

        <item
            android:id="@+id/nav_box"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/box" />

        <item
            android:id="@+id/nav_ski"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ski" />

        <item
            android:id="@+id/nav_hockey"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/hockey" />

        <item
            android:id="@+id/nav_handball"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/handball" />

        <item
            android:id="@+id/nav_aqua"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/aquatics" />

        <item
            android:id="@+id/nav_football"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/football" />
        <item
            android:id="@+id/nav_tennis"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/tennis" />
    </group>

</menu>
